# tv-sanity

./: .gitignore  dune-project  readme.txt  tv-sanity.opam
lib/: copy_prop.ml  cvc5_solver.ml  data_structures.ml  dune  effect_optimizer.ml  incremental_solver.ml  program_parser.ml  program_validator.ml  smtlib_output.ml  solver_pipeline.ml  utilities.ml  z3_solver.ml
test/test-files/: CopyProp-copy_rr_data_4266908-split-1.smt2  dune  gen.ml
